# phoenix-simulacra

./: .git-commit-msg.tmp  .gitignore  .tmp-commit-msg  BACKUP.md  CHANGELOG.md  Cargo.toml  README.md  carbon-phoenix.xcf  dump.txt
.cargo/: config.toml
.github/workflows/: windows.yml
assets/: OFL.txt  carbon-phoenix-appicon2.xcf
docs/: ARM64-BRINGUP.md  ARM64.md  BACKUP.md  BUILDING.md  QEMU-BOOT.md  ROADMAP.md  SECTOR-SIZE-CONVERSION.md  TESTING.md  VIRTUALIZATION.md  WINDOWS-ARM64.md  phnx-format.md
installer/: README.md  simulacra.iss
phoenix-capture/: Cargo.toml
phoenix-capture/src/: backup.rs  fat.rs  lib.rs  ntfs.rs  ntfs_meta.rs  ntfs_preflight.rs  raw.rs  reader.rs  refs.rs  sector_convert.rs
phoenix-capture/tests/: fat_capture_roundtrip.rs  restore_parallel_roundtrip.rs
phoenix-cli/: Cargo.toml  build.rs
phoenix-cli/src/: main.rs  version.rs
phoenix-clone/: Cargo.toml
phoenix-clone/src/: lib.rs  plan.rs
phoenix-clone/tests/: stream_extents_overlap.rs
phoenix-core/: Cargo.toml
phoenix-core/src/: appdata.rs  build_info.rs  container.rs  disk.rs  error.rs  hash.rs  lib.rs  manifest.rs  partreader.rs  pipeline.rs  progress.rs  relocation.rs  sector.rs
phoenix-core/tests/: container_roundtrip.rs  corruption_matrix.rs  pipeline_equivalence.rs
phoenix-gui/: Cargo.toml  build.rs
phoenix-gui/src/: about_panel.rs  action_bar.rs  bootrepair_table.rs  clone_panel.rs  confirm_dialog.rs  disk_dropdown.rs  disk_map.rs  disk_panel.rs  fonts.rs  history_table.rs  job.rs  main.rs  mount_table.rs  qemu_payload.rs  raster.rs  restore_layout.rs  restore_panel.rs  restore_table.rs  sidebar.rs  single_instance.rs  status_modal.rs  stripes.rs  tex_mgr.rs  theme.rs  titlebar.rs  updater.rs  util.rs  utilities.rs  version.rs  virtio_iso.rs  vm_panel.rs  vm_sessions_table.rs
phoenix-launcher/: Cargo.toml  build.rs
phoenix-launcher/src/: main.rs
phoenix-mount/: Cargo.toml  build.rs
phoenix-mount/examples/: probe.rs  probe2.rs
phoenix-mount/src/: active.rs  attach.rs  chunkstore.rs  gpt.rs  image.rs  letters.rs  lib.rs  mbr.rs  session.rs  synthetic.rs  vhd.rs  vhdx.rs  winfsp_mount.rs
phoenix-restore/: Cargo.toml
phoenix-restore/src/: bootrepair.rs  grow.rs  layout_edit.rs  lib.rs  partition_table.rs  plan.rs  relocation.rs  restore.rs  winadmin.rs  winhello.rs
phoenix-systests/: Cargo.toml  build.rs
phoenix-systests/src/: fixture.rs  lib.rs
phoenix-systests/tests/: backup_restore_roundtrip.rs  bitlocker.rs  boot_disk.rs  clone.rs  fat_family.rs  gpt_identity.rs  mbr_identity.rs  mount.rs  partial_clone.rs  partial_mbr.rs  real_clone.rs  real_disk.rs  refs_family.rs  resize_roundtrip.rs  rw_overlay_spike.rs  rw_overlay_winfsp_spike.rs  sector_4kn.rs  sector_convert.rs  vhdx_container.rs  vhdx_diff.rs  vm_overlay_lifecycle.rs  vm_write_path_spikes.rs  vss.rs  winfsp_mount.rs  writable_mount.rs
phoenix-vm/: Cargo.toml
phoenix-vm/src/: accel.rs  boot.rs  config.rs  drives.rs  lib.rs  qemu.rs  qmp.rs  serve_helper.rs  session.rs  share.rs
phoenix-vss/: Cargo.toml
phoenix-vss/src/: lib.rs
scripts/: arm64-dev-env.ps1  build-installer.ps1  build-qemu-payload.ps1  build-release.ps1  live-smoke-checklist.md  make-appicon.ps1  publish-release.ps1  run-real-clone.ps1  run-system-tests-staged.ps1  run-system-tests.ps1  sign-artifacts.ps1
windows/: asinvoker.manifest  build_info.rs
