[workspace]
resolver = "2"
members = [
    "phoenix-core",
    "phoenix-capture",
    "phoenix-vss",
    "phoenix-restore",
    "phoenix-cli",
    "phoenix-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Carbon Phoenix"]

[workspace.dependencies]
phoenix-core = { path = "phoenix-core" }
phoenix-capture = { path = "phoenix-capture" }
phoenix-vss = { path = "phoenix-vss" }
phoenix-restore = { path = "phoenix-restore" }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = { version = "0.13", default-features = false }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }
ntfs = "0.4"
byteorder = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4", "serde"] }
winres = "0.1"
rfd = "0.15"
