[workspace]
resolver = "2"
members = [
    "phoenix-core",
    "phoenix-capture",
    "phoenix-vss",
    "phoenix-restore",
    "phoenix-clone",
    "phoenix-mount",
    "phoenix-cli",
    "phoenix-gui",
    "phoenix-launcher",
    "phoenix-systests",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Phoenix Simulacra"]

[workspace.dependencies]
phoenix-core = { path = "phoenix-core" }
phoenix-capture = { path = "phoenix-capture" }
phoenix-vss = { path = "phoenix-vss" }
phoenix-restore = { path = "phoenix-restore" }
phoenix-clone = { path = "phoenix-clone" }
phoenix-mount = { path = "phoenix-mount" }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = { version = "0.13", default-features = false }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-sys = { version = "0.59", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage_IscsiDisc",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }
byteorder = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4", "serde"] }
winres = "0.1"
rfd = "0.15"
