[package]
name = "phoenix-capture"
description = "Carbon Phoenix partition capture engines"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
phoenix-core.workspace = true
byteorder.workspace = true
thiserror.workspace = true
anyhow.workspace = true
windows-sys.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
phoenix-vss = { path = "../phoenix-vss" }
