[package]
name = "phoenix-cli"
description = "Carbon Phoenix CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "carbon-phoenix"
path = "src/main.rs"

[dependencies]
phoenix-core.workspace = true
phoenix-capture.workspace = true
phoenix-vss.workspace = true
phoenix-restore.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true

[build-dependencies]
winres.workspace = true
