[package]
name = "phoenix-cli"
description = "Phoenix Simulacra CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "simulacra-cli"
path = "src/main.rs"

[dependencies]
phoenix-core.workspace = true
phoenix-capture.workspace = true
phoenix-vss.workspace = true
phoenix-restore.workspace = true
phoenix-clone.workspace = true
phoenix-mount.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true

[features]
# Space-efficient WinFsp on-demand mount. ON by default so dev builds behave
# like shipped ones — mounting must never materialize a full-size temp VHD.
# Needs libclang + the WinFsp SDK to build and WinFsp installed at run time;
# build with --no-default-features on a machine without them (mount then uses
# the full-size temp-VHD stopgap).
default = ["winfsp"]
winfsp = ["phoenix-mount/winfsp", "dep:winfsp"]

[build-dependencies]
winres.workspace = true
winfsp = { version = "0.13", optional = true }
