[package]
name = "phoenix-clone"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
phoenix-core = { workspace = true }
phoenix-capture = { workspace = true }
phoenix-restore = { workspace = true }
phoenix-vss = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
