[package]
name = "phoenix-core"
description = "Carbon Phoenix core: .phnx format, manifest, hashing, disk enumeration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
zstd.workspace = true
thiserror.workspace = true
byteorder.workspace = true
chrono.workspace = true
uuid.workspace = true
windows-sys = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
