[package]
name = "phoenix-gui"
description = "Carbon Phoenix GUI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "carbon-phoenix-gui"
path = "src/main.rs"

[dependencies]
phoenix-core.workspace = true
phoenix-capture.workspace = true
phoenix-vss.workspace = true
phoenix-restore.workspace = true
phoenix-clone.workspace = true
phoenix-mount.workspace = true
eframe = { version = "0.29", default-features = false, features = ["glow"] }
egui = "0.29"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd.workspace = true
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
egui-phosphor = "0.7"
tracing-appender = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[features]
# Space-efficient WinFsp on-demand mount. ON by default so dev builds behave
# like shipped ones — mounting must never materialize a full-size temp VHD.
# Needs libclang + the WinFsp SDK to build and WinFsp installed at run time;
# build with --no-default-features on a machine without them (mount then uses
# the full-size temp-VHD stopgap).
default = ["winfsp"]
winfsp = ["phoenix-mount/winfsp", "dep:winfsp"]

[build-dependencies]
winres.workspace = true
winfsp = { version = "0.13", optional = true }
