[package]
name = "phoenix-gui"
description = "Phoenix Simulacra GUI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "simulacra"
path = "src/main.rs"

[dependencies]
phoenix-core.workspace = true
phoenix-capture.workspace = true
phoenix-vss.workspace = true
phoenix-restore.workspace = true
phoenix-clone.workspace = true
phoenix-mount.workspace = true
# `wgpu`, not `glow`. Windows on ARM ships no desktop OpenGL driver: opengl32
# falls back to Microsoft's GDI software rasterizer, which is OpenGL 1.1, and
# egui_glow needs 2.0+ — so the glow build died at startup on ARM64 hardware
# (2026-07-14). wgpu targets DX12 here, which every Win11 ARM and x64 box has.
# Both arches use the same backend on purpose; see docs/WINDOWS-ARM64.md.
eframe = { version = "0.29", default-features = false, features = ["wgpu"] }
# DX12 must be asked for BY NAME. In wgpu 22 `dx12` is an opt-in feature, while
# Vulkan and GLES switch themselves on by target cfg — and eframe enables only
# `metal` + `webgpu`, which on Windows amounts to nothing. The resulting build
# offered Vulkan and GLES and no DX12: fine on x64 (Vulkan works), fatal on
# Snapdragon, where the Vulkan ICD exposes no usable surface extensions and GLES
# falls back to the same 1.1 software GL. It crashed with "no suitable adapter"
# (2026-07-14). Depending on wgpu directly unifies the feature into eframe's copy.
wgpu = { version = "22", default-features = false, features = ["dx12", "wgsl"] }
egui = "0.29"
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd.workspace = true
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
egui-phosphor = { version = "0.7", features = ["fill", "bold"] }
tracing-appender = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
# Chromeless-window support (custom titlebar): DWM shadow/rounded corners,
# WM_NCHITTEST subclassing for native drag/resize/snap, and the HWND to hook.
raw-window-handle = "0.6"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
# Space-efficient WinFsp on-demand mount. ON by default so dev builds behave
# like shipped ones — mounting must never materialize a full-size temp VHD.
# Needs libclang + the WinFsp SDK to build and WinFsp installed at run time;
# build with --no-default-features on a machine without them (mount then uses
# the full-size temp-VHD stopgap).
default = ["winfsp"]
winfsp = ["phoenix-mount/winfsp", "dep:winfsp"]

[build-dependencies]
winres.workspace = true
winfsp = { version = "0.13", optional = true }
