[package]
name = "phoenix-gui"
description = "Phoenix Simulacra GUI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "simulacra"
path = "src/main.rs"

[dependencies]
phoenix-core.workspace = true
phoenix-capture.workspace = true
phoenix-vss.workspace = true
phoenix-restore.workspace = true
phoenix-clone.workspace = true
phoenix-mount.workspace = true
phoenix-vm.workspace = true
# CPU-rendered egui: winit + softbuffer + a hand-written rasterizer (see the
# Renderer in main.rs and tex_mgr.rs), NOT eframe/wgpu. Every GPU backend fails
# in Windows PE / GPU-less recovery VMs — wgpu's DX12 path can't build egui's
# shader pipeline there (shader translation error 0x8007007E) and its GL path
# finds only Microsoft's 1.1 software GL ("no suitable adapter") — and PE is
# exactly where a bare-metal restore tool has to run. Software rasterizing is
# heavier per frame but runs anywhere; the UI is static 2D so idle CPU stays 0%.
# Same approach as the Diskoria app, which is verified in this PE. (2026-07-15)
egui = "0.29"
# Parallel CPU rasterization (raster.rs): the framebuffer is split into
# horizontal bands, one rayon task each. Only active while painting a frame.
rayon = "1"
egui-winit = { version = "0.29", default-features = false, features = ["clipboard", "links"] }
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
softbuffer = { version = "0.4", default-features = false }
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd.workspace = true
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
egui-phosphor = { version = "0.7", features = ["fill", "bold"] }
tracing-appender = "0.2.5"
# Self-update: query the GitHub Releases API and download the signed installer.
# ureq is blocking (matches the worker-thread model — no async runtime) and
# follows the 302 from the asset URL to objects.githubusercontent.com. TLS is
# the OS-native SChannel via native-tls: it trusts the Windows root store and,
# crucially, needs no C compiler — rustls' `ring` backend requires clang to
# cross-build for aarch64, which the ARM64 cross-build doesn't have.
ureq = { version = "2", default-features = false, features = ["native-tls", "gzip"] }
native-tls = "0.2"
serde = { workspace = true }
serde_json.workspace = true
# SHA-256 of the downloaded installer (the in-tree hash module is blake3 only).
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
# Chromeless-window support (custom titlebar): DWM shadow/rounded corners,
# WM_NCHITTEST subclassing for native drag/resize/snap, and the HWND to hook.
raw-window-handle = "0.6"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    # Authenticode verification of the downloaded installer (WinVerifyTrust).
    # WINTRUST_DATA/WINTRUST_FILE_INFO are gated behind the Cryptography feature.
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
] }

[features]
# Space-efficient WinFsp on-demand mount. ON by default so dev builds behave
# like shipped ones — mounting must never materialize a full-size temp VHD.
# Needs libclang + the WinFsp SDK to build and WinFsp installed at run time;
# build with --no-default-features on a machine without them (mount then uses
# the full-size temp-VHD stopgap).
default = ["winfsp"]
winfsp = ["phoenix-mount/winfsp", "phoenix-vm/winfsp", "dep:winfsp"]

[build-dependencies]
winres.workspace = true
winfsp = { version = "0.13", optional = true }
