[package]
name = "phoenix-mount"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
phoenix-core = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Vhd",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

[features]
# `winfsp` gates the zero-disk-space on-demand mount (serves reads straight
# from the .phnx via a WinFsp filesystem). It requires the WinFsp SDK at build
# time and WinFsp installed at run time, so it is OFF by default; the default
# build uses the materialize-to-temp-VHD path, which needs no external SDK.
default = []
winfsp = []

[dev-dependencies]
uuid = { workspace = true }
