[package]
name = "phoenix-restore"
description = "Carbon Phoenix restore planner and partition writer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
phoenix-core.workspace = true
phoenix-capture.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
windows-sys.workspace = true
