[package]
name = "phoenix-systests"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
publish = false

# This crate is a test harness only: it has no product code, just the VHD
# fixtures and integration tests that require an elevated shell. The tests
# are all `#[ignore]`d so a plain `cargo test` skips them; run them with
# `cargo test -p phoenix-systests -- --ignored --test-threads=1` as admin.

[dependencies]
phoenix-core = { workspace = true }
phoenix-capture = { workspace = true }
phoenix-restore = { workspace = true }
phoenix-clone = { workspace = true }
phoenix-mount = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }

[features]
# Enables the WinFsp zero-space mount test (needs WinFsp + libclang to build).
winfsp = ["phoenix-mount/winfsp", "dep:winfsp"]

[build-dependencies]
# Used from build.rs to apply the winfsp-x64.dll delay-load link arg to the
# test binaries (link args don't propagate from the winfsp-sys dependency).
winfsp = { version = "0.13", optional = true }

[dev-dependencies]
