[package]
name = "phoenix-systests"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
publish = false

# This crate is a test harness only: it has no product code, just the VHD
# fixtures and integration tests that require an elevated shell. The tests
# are all `#[ignore]`d so a plain `cargo test` skips them; run them with
# `cargo test -p phoenix-systests -- --ignored --test-threads=1` as admin.

[dependencies]
phoenix-core = { workspace = true }
phoenix-capture = { workspace = true }
phoenix-restore = { workspace = true }
phoenix-clone = { workspace = true }
phoenix-mount = { workspace = true }
phoenix-vss = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
# `CreateVirtualDisk` (virtdisk.dll) — lets the harness make a 4Kn VHDX with an
# explicit logical sector size, which diskpart's `create vdisk` cannot do. This
# is the plain Win32 VHD API, present on every Windows edition; it is NOT the
# Hyper-V PowerShell module (`New-VHD`), which needs a Pro+ SKU.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_Vhd",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

[features]
# Enables the WinFsp zero-space mount test (needs WinFsp + libclang to build).
winfsp = ["phoenix-mount/winfsp", "dep:winfsp"]

[build-dependencies]
# Used from build.rs to apply the winfsp-x64.dll delay-load link arg to the
# test binaries (link args don't propagate from the winfsp-sys dependency).
winfsp = { version = "0.13", optional = true }

[dev-dependencies]
